--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-tif_stats=0.6
-parallel_wget==0.0.8
+argparse
+boto3
+gippy
+requests
+git+git://github.com/cumulus-nasa/cumulus-message-adapter.git#egg=cumulus-message-adapter
+git+git://github.com/cumulus-nasa/cumulus-message-adapter-python.git#egg=cumulus-message-adapter-python
